--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nestjs-influx2",
   "version": "0.0.12",
-  "main": "./dist/index.js",
+  "main": "./src/index.ts",
   "repository": "https://github.com/dalopez24/nestjs-influx2.git",
   "author": "dalopez24",
   "license": "MIT",
